Move buffer_presented_params_mac to content/common

This is an IPC struct used by gpu_host_messages.h so
it doesn't really belong to content/common/gpu and later
gpu/ipc/common

BUG=596290

Review URL: https://codereview.chromium.org/1830193002

Cr-Commit-Position: refs/heads/master@{#383135}

Former-commit-id: f862957acd612cdb4730f964a7fd07201f841361