content/common/buffer_presented_params_mac.h
@@ -2,8 +2,8 @@
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
-#ifndef CONTENT_COMMON_GPU_BUFFER_PRESENTED_PARAMS_MAC_H_
-#define CONTENT_COMMON_GPU_BUFFER_PRESENTED_PARAMS_MAC_H_
+#ifndef CONTENT_COMMON_BUFFER_PRESENTED_PARAMS_MAC_H_
+#define CONTENT_COMMON_BUFFER_PRESENTED_PARAMS_MAC_H_
 
 #include "base/time/time.h"
 
@@ -20,4 +20,4 @@ struct BufferPresentedParams {
 
 }  // namespace content
 
-#endif  // CONTENT_COMMON_GPU_BUFFER_PRESENTED_PARAMS_MAC_H_
+#endif  // CONTENT_COMMON_BUFFER_PRESENTED_PARAMS_MAC_H_
