content/common/gpu_host_messages.h
@@ -28,7 +28,7 @@
 
 #if defined(OS_MACOSX)
 #include "content/common/accelerated_surface_buffers_swapped_params_mac.h"
-#include "content/common/gpu/buffer_presented_params_mac.h"
+#include "content/common/buffer_presented_params_mac.h"
 #include "ui/base/cocoa/remote_layer_api.h"
 #include "ui/gfx/mac/io_surface.h"
 #endif
